still working on report

--- a/report/figure.tex
+++ b/report/figure.tex
@@ -7,7 +7,7 @@
         \draw[rounded corners, darkblue, fill=darkblue, opacity=0.1] (-4, -1) rectangle (4, 9.7);
     
         \draw[rounded corners, fill=lightgrey] (-4,7.5) rectangle (4, 9.5);
-        \node[font=\bfseries] at (0, 9.25) {1) Collect Data:};
+        \node[font=\bfseries] at (0, 9.25) {1) Collect Descriptions:};
         \node at (0, 8.5) {Extract publicly available descriptions};
         \node at (0, 8.0) {from company websites};
         \draw[thick, -stealth] (0, 7.5) -- (0, 7);
